some CSS tweaks to fix spacing nits

--- a/public/scss/_base.scss
+++ b/public/scss/_base.scss
@@ -62,6 +62,8 @@ body {
             width: 100%;
             height: 28px;
             border: none;
+            margin-top: 2px;
+            margin-left: 5px;
         }
 
         input[type='submit'] {
